# esp32-sim7000g

./: .gitignore  CMakeLists.txt  README.md  idf_component.yml  sdkconfig.defaults
.cursor/rules/: esp-idf-managed-components.mdc  esp32-devkitc-v4-pinout.mdc  sim7000g-modem.mdc
components/at_client/: CMakeLists.txt  Kconfig  at_client.c
components/at_client/include/: at_client.h
components/modem_uart/: CMakeLists.txt  Kconfig  modem_uart.c
components/modem_uart/include/: modem_uart.h
components/sim7000/: CMakeLists.txt  DATA_PATH.md  Kconfig  modem_config.c  sim7000.c
components/sim7000/include/: modem_config.h  sim7000.h
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c  readings_config.c  readings_config.h  readings_upload.c  readings_upload.h  wifi_lab_sntp.c  wifi_lab_sntp.h
